feat: initial implementation
Signed-off-by: Felix Kaechele <felix@kaechele.ca>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,16 +7,22 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+certbot = "^2.7.0"
+dns-lexicon = "^3.15.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.9.1"
+types-requests = "^2.31.0.8"
+
+[tool.poetry.plugins."certbot.plugins"]
+dns-pdns = "certbot_dns_pdns.dns_pdns:Authenticator"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.black]
-target-version = ["py311"]
+target-version = ["py311", "py312"]
 
 [tool.mypy]
 python_version = "3.11"
