--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-certbot = "^2.7.0"
-dns-lexicon = "^3.15.0"
+certbot = ">=2.7.0"
+dns-lexicon = ">=3.15.0"
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.9.1"
-types-requests = "^2.31.0.8"
+black = ">=23.9.1"
+types-requests = ">=2.31.0.8"
 
 [tool.poetry.plugins."certbot.plugins"]
 dns-pdns = "certbot_dns_pdns.dns_pdns:Authenticator"
