ci: use my fork for python-semantic-release
The fork simply reintroduces https://github.com/python-semantic-release/python-semantic-release/pull/692

Signed-off-by: Felix Kaechele <felix@kaechele.ca>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Python Semantic Release
         id: release
         # uses: python-semantic-release/python-semantic-release@v8.1.1
-        uses: zckv/python-semantic-release@switch_to_a_composite_action
+        uses: kaechele/python-semantic-release@composite-action
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -35,7 +35,7 @@ jobs:
         if: steps.release.outputs.released == 'true'
 
       - name: Publish package distributions to GitHub Releases
-        uses: python-semantic-release/upload-to-gh-release@main
+        uses: kaechele/upload-to-gh-release@composite-action
         if: steps.release.outputs.released == 'true'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
