--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,15 +18,14 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Python 3.11
+      - name: Setup Python 3.12
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.12"
 
       - name: Python Semantic Release
         id: release
-        # uses: python-semantic-release/python-semantic-release@v8.1.1
-        uses: kaechele/python-semantic-release@composite-action
+        uses: python-semantic-release/python-semantic-release@v9.8.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -35,7 +34,7 @@ jobs:
         if: steps.release.outputs.released == 'true'
 
       - name: Publish package distributions to GitHub Releases
-        uses: kaechele/upload-to-gh-release@composite-action
+        uses: python-semantic-release/upload-to-gh-release@v9.8.0
         if: steps.release.outputs.released == 'true'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
